--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "express": "^4.16.3",
+    "mongoose": "^5.0.12"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "webpack",
-      "watch": "webpack --watch"
+    "lint": "eslint src"
   },
   "repository": {
     "type": "git",
@@ -19,8 +22,10 @@
   },
   "homepage": "https://github.com/AmsterGet/URLShortener#readme",
   "devDependencies": {
-    "mongoose": "^5.0.12",
-    "webpack": "^4.4.1",
-    "webpack-cli": "^2.0.13"
+    "eslint": "^4.9.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.6.1"
   }
 }
