--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cookie-parser": "^1.3.5",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "fast-csv": "^2.4.1",
     "json2csv": "^4.1.2",
     "mongoose": "^5.0.15",
     "passport": "^0.4.0",
